--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" />
@@ -605,6 +605,7 @@
     <Content Include="Areas\Admin\Views\ManageUser\HelpDesk.cshtml" />
     <Content Include="Areas\Technician\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Technician\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Technician\Views\Shared\_TopLayout.cshtml" />
     <Content Include="Areas\Technician\Views\ManageTicket\Index.cshtml" />
     <Content Include="Areas\Technician\Views\ManageTicket\Solve.cshtml" />
     <Content Include="Areas\Technician\Views\Home\Index.cshtml" />
@@ -649,9 +650,6 @@
     <Content Include="Areas\HelpDesk\Views\BusinessRule\Edit.cshtml" />
     <Content Include="Areas\HelpDesk\Views\Shared\_TopLayout.cshtml" />
     <Content Include="Areas\HelpDesk\Views\Home\Index.cshtml" />
-    <Content Include="Areas\Technician\Views\Home\Index.cshtml" />
-    <Content Include="Areas\Technician\Views\Profile\Index.cshtml" />
-    <Content Include="Areas\Technician\Views\Profile\UpdateProfile.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
