--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -403,6 +403,7 @@
     <Content Include="Content\AdminLTE.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\daterangepicker.css" />
     <Content Include="Content\css\graph.css" />
     <Content Include="Content\css\select2.css" />
     <Content Include="Content\css\select2.min.css" />
@@ -453,7 +454,9 @@
     <Content Include="Content\img\user6-128x128.jpg" />
     <Content Include="Content\img\user7-128x128.jpg" />
     <Content Include="Content\img\user8-128x128.jpg" />
+    <Content Include="Content\js\daterangepicker.js" />
     <Content Include="Content\js\jPages.min.js" />
+    <Content Include="Content\js\moment.min.js" />
     <Content Include="Content\js\spectrum.js" />
     <Content Include="Content\js\select2.full.js" />
     <Content Include="Content\Plugins\jquery.ui\jquery-ui.min.css" />
