--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -669,6 +669,7 @@
     <Content Include="Scripts\globalize\relative-time.js" />
     <Content Include="Scripts\globalize\unit.js" />
     <Content Include="Content\Plugins\jstree\jstree.min.js" />
+    <Content Include="Scripts\helpdesk-businessrules.js" />
     <Content Include="Scripts\tms-dropdown.js" />
     <Content Include="Scripts\helpdesk-manage-ticket.js" />
     <Content Include="Scripts\jquery.cookie.js" />
