--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -47,6 +47,7 @@
     </httpModules>
     <roleManager enabled="true" />
     <globalization uiCulture="en" culture="en-GB" />
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <modules>
